--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.12
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  firebase_auth: ^5.7.0
   firebase_core: ^3.15.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   go_router: ^16.0.0
 
 dev_dependencies:
