--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   go_router: ^16.0.0
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
