--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.12
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
@@ -38,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   go_router: ^16.0.0
   google_nav_bar: ^5.0.7
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
